[package]
name = "study_vulkano"
version = "0.1.0"
authors = ["DongKyoo Kim"]
edition = "2021"

[[bin]]
name = "buffer-creation"
path = "03-buffer-creation/main.rs"

[[bin]]
name = "compute-pipeline"
path = "04-compute-pipeline/main.rs"

[[bin]]
name = "windowing"
path = "07-windowing/main.rs"

[dependencies]
vulkano = "0.34"
vulkano-shaders = "0.34.0"
winit = { version = "0.29", features = ["rwh_05"] }

[profile.dev]
opt-level = 1
